--- a/src/components/react/organisms/AboutMe.css
+++ b/src/components/react/organisms/AboutMe.css
@@ -3,13 +3,18 @@
 	padding: 2rem;
 }
 
+.about-heading {
+	margin: 0;
+}
+
 .about-content {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	height: 100%;
+	height: min-content;
+	max-height: 100%;
 	overflow: auto;
 }
 
@@ -21,6 +26,7 @@
 
 .about-desc {
 	width: min(100%, 800px);
+	margin: 0;
 	font-size: max(min(1.4rem, 2.7vw), .9rem);
 	text-align: justify;
 	line-height: 120%;
