--- a/src/components/react/organisms/Splash.css
+++ b/src/components/react/organisms/Splash.css
@@ -78,15 +78,20 @@
 }
 
 /* Note: Non-standard breakpoint used for splash (Because it looks better) */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 800px), only print {
 	.splash-overlay-content {
 		width: 100%;
 		margin-right: 0;
 		background-color: #F7FAFD99;
 		user-select: none;
-		/* Unfortunately prevents scrolling on touchscreen */
+		/* Previously adjusting colors to preserve opacity when printing. Now hiding the animation instead */
+		/* color-adjust: exact; */
+		/* -webkit-print-color-adjust: exact; */
+
+		/* Unfortunately prevents scrolling on touchscreen. Added conditionally with other @media queries */
 		/* pointer-events: none; */
 	}
+
 	.splash-overlay-visual {
 		width: 100%;
 		height: 100%;
@@ -96,9 +101,22 @@
 	}
 }
 
-/* TODO: Yes Mouse, Yes Canvas Interaction */
+/* Hide Canvas Animation When Printing */
+@media only print {
+	.splash-overlay-visual {
+		background-color: #F0F0F0;
+		color-adjust: exact;
+		-webkit-print-color-adjust: exact;
+	}
+
+	.splash-overlay-visual > * {
+		display: none;
+	}
+}
+
+/* Yes Mouse, Yes Canvas Interaction. Otherwise, No Canvas Interaction */
 @media only screen and (pointer: fine) {
 	.splash-overlay-content {
-		 pointer-events:  none;
+		pointer-events: none;
 	}
 }
